test/negative/ClassInheritIdenticalSignatures/B.java
package B;
public class B {
    public B() {}
    public int x() { return 0; }
}
